Read through chapter 3

--- a/sections/05-evaluation.tex
+++ b/sections/05-evaluation.tex
@@ -155,6 +155,12 @@ How practical the SAFE Network will be for applications like video streaming and
 
 The fee model and economy of \textit{Safecoin} is not well established. The \textit{Safecoin} white-paper\cite{lambert2015safecoin} does give some indications as to how things will work but the implementation details are omitted. The economy of \textit{Safecoin} is crucial for the success of the SAFE Network, if it doesn't work then the network itself will not function. The disbursement of coins through \textit{farming} and other means is an interesting question that needs to be answered. There have been talks about rewarding developers for usage of their application and also rewarding creators for reads of their content. Imagine a Spotify where users directly pay artists when they listen to the content, no middle man needed. Another critical point that is worrisome is how \textit{farming} rewards the \textit{vault} owners. In the white-paper on \textit{Safecoin} it is said that \textit{Safecoin} is awarded ``to the successful node as data is retrieved from it (GETS), as opposed to when it is stored (PUTS)''. This does make sense to some degree but in others leaves a lot unanswered. What this means is that if data is never accessed, the \textit{vaults} storing that data will never be rewarded for doing so. This means that the network has to support the data indefinitely and nobody will ever be incentivised for doing so. This means that  the amount of \textit{Safecoin} that was originally used to pay for the storage of the data has to be great enough to cover storage and network costs for decades upon decades. That simply doesn't make sense. A possible answer to this is that \textit{vaults} are paid during \textit{churn} when they send and receive data to one another, this is a mere guess however and is not specified in the white-paper.
 
+%%%%%%%%%%
+
+The absence of concrete information on how \textit{Safecoin} will function is troublesome. Things like the total cap on coins issued is not clearly defined and how much data will cost isn't either. Another feature that has been discussed is application developers being able to hard code their \textit{Safecoin} wallet address into their website/application. What would then happen is that as their product is used, they would receive a stream of revenue that relates to how popular it is. In \citetitle{lambert2015safecoin}\cite{lambert2015safecoin} it is said that "based on how much the application is used, the network will pay safecoins to the safecoin wallet address of the app creator. This provides a built in revenue stream for app developers, one that is directly proportional to how successful their application is." Although general ideas and outlines are specified in the whitepaper on Safecoin, the specifics of how a lot of this will operate is not specified. Thus careful attention to how \textit{Safecoin} is implemented is very crucial to the success of the network. Without proper incentives and a working economy it will be difficult to get people to run \textit{vaults} and use the network. The success of \textit{Safecoin} is thus vital to the success of the SAFE Network.
+
+%%%%%%%%
+
 \subsection{Maidsafe has an information problem}
 
 The situation regarding documentation makes suggesting working with the SAFE Network extremely difficult. The main problem is the lack of clarity and ``cannon'' knowledge on different subjects. There is no central location where a developer could lookup a piece of information and get the hard facts as to what they are enquiring about. Information is spread thin and far across the forums and different blog websites. Sometimes it is hard to distinguish between opinions on how things should be and how they actually are. Indeed the Wiki for the SAFE Network is incredibly out of date in some areas, some of it is just plain wrong. This issue resulted in some very kind community members taking it upon themselves to write the \citetitle{safe-network-primer} document. This document is one of the first unified resources of information that people can use to learn about the SAFE Network. One of the only that goes into enough detail to explain the network properly. This speaks to the enthusiasm of the community at large who believe in the SAFE Network and its ultimate utility. There is a lot of knowledge out there, it just needs to be brought into one central location that is an approved resource of knowledge.
